--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "starshipwright",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Generate 2D starships",
-  "module": "dist/starshipwright.esm.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "webpack --config demo.config.js && webpack --config umd.config.js && webpack --config umd.min.config.js && webpack --config esm.config.js && webpack --config esm.min.config.js"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,13 +22,6 @@
   },
   "homepage": "https://github.com/joseprio/starshipwright#readme",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@purtuga/esm-webpack-plugin": "^1.2.1",
-    "babel-loader": "^8.0.6",
-    "ts-loader": "^8.0.2",
-    "typescript": "^3.9.7",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "typescript": "^3.9.7"
   }
 }
