--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "dist",
     "noImplicitAny": false,
-    "module": "es6",
-    "target": "es6",
-    "jsx": "react",
-    "allowJs": true
+    "module": "esnext",
+    "target": "esnext",
+    "allowJs": true,
+    "declaration": true,
+    "lib": ["es2017", "es7", "es6", "dom"],
   }
 }
