--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "../dist",
     "noImplicitAny": false,
     "module": "esnext",
     "target": "esnext",
     "allowJs": true,
     "declaration": true,
-    "lib": ["es2017", "es7", "es6", "dom"],
+    "lib": ["es2017", "es7", "es6", "dom"]
   }
 }
