--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "typescript": "^3.9.7",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "np": "^7.0.0"
   }
 }
