--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "esnext",
     "allowJs": true,
     "declaration": true,
-    "lib": ["es2017", "es7", "es6", "dom"]
+    "lib": ["es2017", "es7", "es6", "dom"],
+    "moduleResolution": "node"
   }
 }
