--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "canvas-utils": "joseprio/canvas-utils"
+    "game-utils": "joseprio/game-utils"
   }
 }
